[gd_scene load_steps=45 format=3 uid="uid://dmwv25fu0o4fw"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_gy4rw"]
[ext_resource type="Script" path="res://Scripts/Player/stats.gd" id="1_ivf41"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerShooting.gd" id="3_1vghd"]
[ext_resource type="PackedScene" uid="uid://cy2sq2hpoi036" path="res://Scenes/Player/rope.tscn" id="3_dr7dj"]
[ext_resource type="Shader" path="res://Assets/Shaders/VHS.gdshader" id="4_6y0ai"]
[ext_resource type="Script" path="res://Scripts/Player/console.gd" id="4_auxvo"]
[ext_resource type="Script" path="res://Scenes/Player/sound.gd" id="5_dhxhp"]
[ext_resource type="Texture2D" uid="uid://be7vhrp45g3ew" path="res://Assets/Textures/Weapons/HandIdle.png" id="5_hmdxp"]
[ext_resource type="AudioStream" uid="uid://tt6yclcsf2w4" path="res://Assets/sound/step.wav" id="6_hkwj1"]
[ext_resource type="AudioStream" uid="uid://bcw4qq1akwolr" path="res://Assets/sound/jump.wav" id="7_hbbqs"]
[ext_resource type="Texture2D" uid="uid://bwr53tht4eraq" path="res://Assets/Textures/Weapons/BombCharged1.png" id="7_lxq80"]
[ext_resource type="AudioStream" uid="uid://c6x16nepfyclx" path="res://Assets/sound/land.wav" id="8_5uogr"]
[ext_resource type="Texture2D" uid="uid://bqdxk5ysu6eiv" path="res://Assets/Textures/crosshair.png" id="8_laitr"]
[ext_resource type="Texture2D" uid="uid://d31u5qfq3hk2a" path="res://Assets/Textures/Weapons/ChargeshotRelease.png" id="9_2gc4x"]
[ext_resource type="Texture2D" uid="uid://c668mpksg7ki7" path="res://Assets/Textures/DashIcon3.png" id="9_6ww2s"]
[ext_resource type="AudioStream" uid="uid://dyy8b5p130gqf" path="res://Assets/sound/dash.wav" id="9_lncbg"]
[ext_resource type="Texture2D" uid="uid://ckbmokfhhh0o3" path="res://Assets/Textures/Weapons/HandShoot.png" id="9_qtnrw"]
[ext_resource type="AudioStream" uid="uid://cvkkeashm7r8s" path="res://Assets/sound/slash.wav" id="10_4t61b"]
[ext_resource type="Texture2D" uid="uid://b6q70qnjggrvj" path="res://Assets/Textures/Weapons/BombCharged2.png" id="10_qmh2p"]
[ext_resource type="Texture2D" uid="uid://45rx2dp8qq27" path="res://Assets/Textures/Weapons/BombCharged3.png" id="11_5dlnk"]
[ext_resource type="AudioStream" uid="uid://e0g5vof6ebxs" path="res://Assets/sound/Wind.mp3" id="11_6jj7m"]
[ext_resource type="Texture2D" uid="uid://d0ef1mw2k5b4u" path="res://Assets/Textures/Weapons/HandCharge.png" id="12_7sbbn"]
[ext_resource type="Texture2D" uid="uid://gr1lup0vgjlt" path="res://Assets/Textures/Weapons/BombCharged4.png" id="12_v1dsi"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2nbw2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xrd5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2c1an"]
size = Vector3(1.96, 2.015, 7.71171)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v0y0m"]
load_path = "res://.godot/imported/HandPoint.png-d611a04c7f0983ee3ac755766f284fb2.s3tc.ctex"

[sub_resource type="Animation" id="Animation_icrn3"]
resource_name = "Bomb"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand/BombCharge:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand/BombCharge:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_lxq80"), ExtResource("7_lxq80"), ExtResource("10_qmh2p"), ExtResource("11_5dlnk"), ExtResource("12_v1dsi"), ExtResource("7_lxq80")]
}

[sub_resource type="Animation" id="Animation_viq50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hmdxp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.14, 0.14, 0.14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Hand/BombCharge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Hand/BombCharge:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_lxq80")]
}

[sub_resource type="Animation" id="Animation_ybwtl"]
resource_name = "Shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_qtnrw"), ExtResource("5_hmdxp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.1),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Vector3(0.14, 0.14, 0.14), Vector3(0.16, 0.16, 0.16), Vector3(0.14, 0.14, 0.14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nan1"]
_data = {
"Bomb": SubResource("Animation_icrn3"),
"RESET": SubResource("Animation_viq50"),
"Shoot": SubResource("Animation_ybwtl")
}

[sub_resource type="Animation" id="Animation_gvej1"]
resource_name = "Charge"
length = 0.1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_7sbbn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.16415e-10, 0.0185955, 0.0397431, 0.0535802, 0.0857284, 0.0999114),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.48, -0.133, -0.776), Vector3(0.498, -0.132, -0.776), Vector3(0.52, -0.138, -0.776), Vector3(0.508, -0.14, -0.776), Vector3(0.48, -0.133, -0.776), Vector3(0.48, -0.13, -0.776)]
}

[sub_resource type="Animation" id="Animation_n1fc0"]
resource_name = "ChargeShoot"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand/ChargeShotRelease:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand/ChargeShotRelease:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(13.265, 13.265, 13.265), Vector3(37, 37, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Hand/ChargeShotRelease:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.643137), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bplsj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_qtnrw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.565, -0.135, -0.776)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Hand/ChargeShotRelease:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Hand/ChargeShotRelease:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(29.49, 29.49, 29.49)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Hand/ChargeShotRelease:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5s1es"]
_data = {
"Charge": SubResource("Animation_gvej1"),
"ChargeShoot": SubResource("Animation_n1fc0"),
"RESET": SubResource("Animation_bplsj")
}

[sub_resource type="Animation" id="Animation_qxumj"]
resource_name = "Bomb"
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand/BombCharge:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand/BombCharge:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_lxq80"), ExtResource("10_qmh2p"), ExtResource("11_5dlnk"), ExtResource("12_v1dsi")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Hand/BombCharge:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(12.09, 12.09, 12.09), Vector3(15.295, 15.295, 15.295)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Hand/BombCharge:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.15, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Hand:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.16, 0.16, 0.16), Vector3(0.14, 0.14, 0.14)]
}

[sub_resource type="Animation" id="Animation_anolj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand/BombCharge:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand/BombCharge:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_lxq80")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Hand/BombCharge:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(12.09, 12.09, 12.09)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Hand/BombCharge:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Hand:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.14, 0.14, 0.14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3um8"]
_data = {
"Bomb": SubResource("Animation_qxumj"),
"RESET": SubResource("Animation_anolj")
}

[sub_resource type="Animation" id="Animation_5ym50"]
resource_name = "Block"
length = 0.1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.537561)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.38, -0.245, -0.776), Vector3(0.065, -0.045, -0.776)]
}

[sub_resource type="Animation" id="Animation_pokml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.38, -0.245, -0.776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/SlashArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lasp6"]
resource_name = "Slash"
length = 0.5
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.15, 0.339576, 0.497339),
"transitions": PackedFloat32Array(1, 1, 2, 1, 1),
"update": 0,
"values": [Vector3(0.38, -0.245, -0.776), Vector3(0.695, 0.055, -0.776), Vector3(-0.7, -0.46, -0.776), Vector3(0.35, -0.555, -0.776), Vector3(0.38, -0.245, -0.776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0250112, 0.15, 0.202014),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.349066), Vector3(0, 0, 0.523599), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/SlashArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.025, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_wif2c"]
resource_name = "Unblock"
length = 0.1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.065, -0.045, -0.776), Vector3(0.38, -0.245, -0.776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -0.537561), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13bah"]
_data = {
"Block": SubResource("Animation_5ym50"),
"RESET": SubResource("Animation_pokml"),
"Slash": SubResource("Animation_lasp6"),
"Unblock": SubResource("Animation_wif2c")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6fbld"]
shader = ExtResource("4_6y0ai")
shader_parameter/shake = 0.0
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.0045
shader_parameter/colorOffsetIntensity = 0.2
shader_parameter/pixelSize = 500.0
shader_parameter/grainIntensity = 0.04
shader_parameter/use_overlay = true
shader_parameter/use_lens_distortion = true
shader_parameter/overlay_color = Color(1, 1, 1, 10)
shader_parameter/lens_distortion_strength = 0.0

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 12
collision_mask = 12
floor_stop_on_slope = false
script = ExtResource("1_gy4rw")

[node name="Stats" type="Node3D" parent="."]
script = ExtResource("1_ivf41")
AttackSpeed = 0.2
BulletSpeed = 100.0
ChargeDamage = 150.0
BombSize = 2.0
MeleeDamage = 40.0

[node name="Shooting" type="Node3D" parent="."]
script = ExtResource("3_1vghd")

[node name="ShootingTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="chargeTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="BombTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="BallTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="SlashTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="DashTimer" type="Timer" parent="Shooting"]
one_shot = true

[node name="ReadyTimer" type="Timer" parent="Shooting"]
wait_time = 0.1
one_shot = true

[node name="Console" type="Node3D" parent="."]
script = ExtResource("4_auxvo")

[node name="Sound" type="Node3D" parent="."]
script = ExtResource("5_dhxhp")

[node name="WalkingSounds" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("6_hkwj1")
volume_db = -5.0

[node name="JumpSound" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("7_hbbqs")
volume_db = -10.0

[node name="LandSound" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("8_5uogr")
volume_db = -30.0

[node name="DashSound" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("9_lncbg")
volume_db = -27.5

[node name="SlashSound" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("10_4t61b")
volume_db = -20.0

[node name="WindSound" type="AudioStreamPlayer3D" parent="Sound"]
stream = ExtResource("11_6jj7m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_2nbw2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0xrd5")

[node name="GroundCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.2, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476265, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="ForwardWallCast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.364573, 0)
target_position = Vector3(0, 0, -0.75)

[node name="BackwardsWallCast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.364573, 0)
target_position = Vector3(0, 0, 0.75)

[node name="GrappleRaycast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.495963)
target_position = Vector3(0, 0, -60)

[node name="ShootingRayCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -500)

[node name="ShootingRayCastEnd" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -200)

[node name="LaserLooking" type="Marker3D" parent="Head"]

[node name="Rope" parent="Head" instance=ExtResource("3_dr7dj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.435638, -0.620499, -0.352578)

[node name="ShootingStart" type="Marker3D" parent="Head"]
transform = Transform3D(0.999962, 7.61524e-05, 0.0087262, 0, 0.999962, -0.00872653, -0.00872654, 0.0087262, 0.999924, 0.65695, -0.283747, -0.845376)

[node name="SlashArea" type="Area3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.120497, -1.03901)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/SlashArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.35596)
shape = SubResource("BoxShape3D_2c1an")

[node name="Hand" type="Sprite3D" parent="Head"]
transform = Transform3D(0.14, 0, 0, 0, 0.14, 0, 0, 0, 0.14, 0.38, -0.245, -0.776)
texture = ExtResource("9_qtnrw")

[node name="BombCharge" type="Sprite3D" parent="Head/Hand"]
transform = Transform3D(12.09, 0, 0, 0, 12.09, 0, 0, 0, 12.09, -0.511784, -0.655427, -0.673885)
visible = false
texture_filter = 0
texture = ExtResource("7_lxq80")

[node name="ChargeFlash" type="Sprite3D" parent="Head/Hand"]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 1.06865, -0.697811, -0.694946)
texture_filter = 0
texture = ExtResource("12_v1dsi")

[node name="ChargeShotRelease" type="Sprite3D" parent="Head/Hand"]
transform = Transform3D(29.49, 0, 0, 0, 29.49, 0, 0, 0, 29.49, 1.11871, -0.321138, -0.694946)
visible = false
texture_filter = 0
texture = ExtResource("9_2gc4x")

[node name="LaserStartPos" type="Marker3D" parent="Head/Hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.33766, -0.961187, -0.458255)

[node name="SecondHand" type="Sprite3D" parent="Head"]
transform = Transform3D(0.14, 0, 0, 0, 0.14, 0, 0, 0, 0.14, -0.644311, -0.135, -0.776)
visible = false
texture = SubResource("CompressedTexture2D_v0y0m")

[node name="EnemySpawnLocation" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.653399, -8.08742)

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="IsDashingTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootingAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6nan1")
}

[node name="ChargeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5s1es")
}

[node name="BombAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u3um8")
}

[node name="MeleeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13bah")
}

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_6fbld")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Sprite2D" parent="UI"]
position = Vector2(960, 540)
scale = Vector2(3, 3)
texture = ExtResource("8_laitr")

[node name="DashIcon" type="Sprite2D" parent="UI"]
position = Vector2(960, 568)
scale = Vector2(2, 2)
texture = ExtResource("9_6ww2s")

[node name="HP" type="Label" parent="UI"]
layout_mode = 0
offset_left = -58.0
offset_top = 988.0
offset_right = 201.0
offset_bottom = 1084.0
theme_override_font_sizes/font_size = 61
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="UI"]
layout_mode = 0
offset_left = 57.0
offset_top = 990.0
offset_right = 316.0
offset_bottom = 1086.0
theme_override_font_sizes/font_size = 61
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CayoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="Shooting/ShootingTimer" to="Shooting" method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Shooting/chargeTimer" to="Shooting" method="_on_charge_timer_timeout"]
[connection signal="timeout" from="Shooting/BombTimer" to="Shooting" method="_on_bomb_timer_timeout"]
[connection signal="timeout" from="Shooting/BallTimer" to="Shooting" method="_on_ball_timer_timeout"]
[connection signal="timeout" from="Shooting/SlashTimer" to="Shooting" method="_on_slash_timer_timeout"]
[connection signal="timeout" from="Shooting/DashTimer" to="Shooting" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Shooting/ReadyTimer" to="Shooting" method="_on_ready_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="IsDashingTimer" to="." method="_on_is_dashing_timer_timeout"]
